# python-chat-app

./: .flaskenv  Dockerfile  LICENSE  README.md  chat_app.py  pyproject.toml
python_chat_app/: __init__.py  routes.py
python_chat_app/templates/: index.html
