[tool.poetry]
name = "python-chat-app"
version = "0.1.0"
description = "Python chat application"
authors = ["Stephen Nicholson"]
license = "MIT"
readme = "README.md"
packages = [{include = "python_chat_app"}]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.2.3"
flask-socketio = "^5.3.3"

[tool.poetry.group.dev.dependencies]
Flask = "^2.2.3"
black = "^23.1.0"
pylint = "^2.17.1"
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
